# json

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
assets/leak_test/: Makefile  build.mk
hook/scripts/: 42header-remover.sh
src/: Makefile
src/ft/json/: ft_json.h  ft_json_free.c  ft_json_has_extra_key.c  ft_json_internal.h  ft_json_stringify.c  ft_json_tokenize.c  ft_json_tokenize_default.c  ft_json_tokenize_keyword.c  ft_json_tokenize_word.c  ft_json_tokenizer_state_number.c  ft_json_tokenizer_state_string.c
src/ft/json/free/: ft_json_free_dict.c  ft_json_free_list.c  ft_json_free_string.c  ft_json_free_value.c  ft_json_value_dict_free.c  ft_json_value_list_free.c
src/ft/json/get/: ft_json_get_bool.c  ft_json_get_dict.c
src/ft/json/parse/: ft_json_parse_dict.c  ft_json_parse_internal.c  ft_json_parse_list.c  ft_json_parse_value.c
src/ft/json/tokenize/: ft_json_tokenize.c  ft_json_tokenize_add_number_token.c  (+25 more)
src/ft/stringbuilder/: ft_stringbuilder_append.c  ft_stringbuilder_append_string.c  ft_stringbuilder_free.c  ft_stringbuilder_new.c  ft_stringbuilder_to_string.c
template/: launch.json.before.txt  tasks.json.before.txt
test/: Makefile
test/black/: Makefile
test/white/: Makefile  common.mk
test/white/data/: .editorconfig  miniRT-csg-schema  token-00.tree  token-00.txt  token-01.txt  token-02.txt  token-03.tree  token-03.txt  token-04.json  token-04.tree  token-05.tree  token-06.tree  token-07.json  token-07.tree  token-07.txt
test/white/parse/: main.c  test.c  test.h  test.sh
test/white/tokenize/: Makefile  main.c  test.sh
(+9 files in other folders)
